--- a/audio.html
+++ b/audio.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Audio</title>
-        <link rel="stylesheet" href="../css/audio.css" />
+        <link rel="stylesheet" href="css/audio.css" />
         <script
             src="https://kit.fontawesome.com/946ee284d2.js"
             crossorigin="anonymous"
@@ -14,7 +14,7 @@
     <body>
         <header><h2>My Spotify</h2></header>
         <div class="container">
-            <audio controls id="audio" src="../media/1.mp3"></audio>
+            <audio controls id="audio" src="media/1.mp3"></audio>
 
             <div class="btns">
                 <i class="fa-solid fa-play" id="play"></i>
@@ -54,6 +54,6 @@
                 </h4>
             </div>
         </div>
-        <script src="../js/audio.js"></script>
+        <script src="js/audio.js"></script>
     </body>
 </html>
